--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         }
     ],
     "require": {
-        "sentry/sdk": "^3.0"
+        "sentry/sdk": "^3.1",
+        "sentry/sentry": "^3.3"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     }
 }
