--- a/assets/package.json
+++ b/assets/package.json
@@ -10,15 +10,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jjpz/seagrove-wp-theme.git"
+    "url": "git+https://github.com/phoenixfusionx/seagrove-wp-theme.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "r@ndi <randylistrud352@gmail.com>",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jjpz/seagrove-wp-theme/issues"
-  },
-  "homepage": "https://github.com/jjpz/seagrove-wp-theme#readme",
   "devDependencies": {
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
