--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,1 @@
-{
-    "name": "jjpz/seagrove",
-    "authors": [
-        {
-            "name": "Juanjo Perez",
-            "email": "jjperez85@gmail.com"
-        }
-    ],
-    "require": {
-        "sentry/sdk": "^3.1",
-        "sentry/sentry": "^3.3"
-    },
-    "config": {
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true
-        }
-    }
-}
+{"name":"jjpz/seagrove","authors":[{"name":"r@ndi","email":"randylistrud352@gmail.com"}],"require":{"sentry/sdk":"^3.1","sentry/sentry":"^3.3"},"config":{"allow-plugins":{"composer/package-versions-deprecated":true}}}
